# Scrap-Master

./: .env.example  .gitignore  GUIA_IA_PROJETO_AUTOAPPLY_LLM.md  README.md  pyproject.toml
app/: __init__.py
app/browser/: __init__.py  manager.py
app/cli/: main.py
app/config/: __init__.py  settings.py
app/core/: __init__.py  models.py
app/documents/: __init__.py  resume.py
app/forms/: __init__.py  mapper.py  models.py
app/llm/: __init__.py  client.py  prompts.py  schemas.py
app/observability/: __init__.py  logging.py
app/ranking/: __init__.py  scoring.py
app/review/: __init__.py  cli.py
app/security/: __init__.py  masking.py
app/sources/: __init__.py  base.py  mock.py  registry.py
app/storage/: __init__.py  database.py  models.py  repository.py
config/: profile.example.yaml  settings.example.yaml
prompts/: evaluate_compatibility.txt  map_form.txt  normalize_job.txt
tests/: helpers.py  test_browser.py  test_cli.py  test_config.py  test_documents.py  test_fill_form.py  test_forms.py  test_llm.py  test_mock_source.py  test_ranking.py  test_review.py  test_storage.py
tests/fixtures/: careers_home.html  job_apply.html  job_detail.html  job_form.html
