[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "scrap-master"
version = "0.1.0"
description = "Human-in-the-loop job application assistant foundation."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Vinicius Caires" }
]
dependencies = [
  "email-validator>=2.1,<3.0",
  "httpx>=0.27,<1.0",
  "loguru>=0.7.2,<1.0",
  "pydantic>=2.7,<3.0",
  "pypdf>=5.0,<7.0",
  "pyyaml>=6.0.1,<7.0",
  "sqlalchemy>=2.0.36,<2.1",
  "sqlmodel>=0.0.22,<1.0",
  "typer>=0.12,<1.0"
]

[project.optional-dependencies]
browser = [
  "playwright>=1.44,<2.0"
]
dev = [
  "pytest>=8.2,<9.0"
]

[project.scripts]
scrap-master = "app.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
